<resources>
    <string name="app_name">Business Management</string>
    <string name="login">LOGIN</string>
    <string name="signup">SignUp</string>
    <string name="phone_logo">phone logo</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="password_logo">password_logo</string>
    <string name="enter_password">Enter password</string>
    <string name="login_sentence_case">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="google_logo">google logo</string>
    <string name="continue_using_google">Continue using Google</string>
    <string name="otp_logo">otp logo</string>
    <string name="enter_one_time_password">Enter one time password</string>
    <string name="get_otp">Get OTP</string>
    <string name="user_logo">user logo</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="franchisee_franchiser">Franchisee / Franchiser</string>
    <string name="search_a_keyword">Search a keyword</string>
</resources>