<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".FranchiseeAuth1Activity"
    android:animateLayoutChanges="true">

    <!--Card Container-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_acc_type_franchisee1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEDB5"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:animateLayoutChanges="true">

        <!--Card Container layout-->

        <RelativeLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <!--Login switch-->
            <TextView
                android:id="@+id/tvBtn_franchisee1_auth_login"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_toStartOf="@id/view1"
                android:background="@drawable/primary_partition_bg"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/Maastricht_Blue"
                android:textSize="18sp" />

            <!--Hidden view-->
            <View
                android:id="@+id/view1"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true" />

            <!--Signup switch-->
            <TextView
                android:id="@+id/tvBtn_franchisee1_auth_signup"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_toEndOf="@id/view1"
                android:background="@drawable/secondary_partition_bg"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/signup"
                android:textColor="@color/Dim_Gray"
                android:textSize="18sp" />

            <!--country code picker-->
            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/ll_franchisee1_auth_phone"
                android:layout_alignBottom="@id/ll_franchisee1_auth_phone"
                android:layout_marginStart="15dp"
                android:background="@drawable/edt_bg"
                android:gravity="center"
                app:ccpDialog_backgroundColor="@color/white"
                app:ccpDialog_textColor="@color/black"
                app:ccp_contentColor="@color/black"
                app:ccp_countryPreference="us,in"
                app:ccp_showArrow="false"
                app:ccp_showNameCode="false" />

            <!--Phone layout-->
            <LinearLayout
                android:id="@+id/ll_franchisee1_auth_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBtn_franchisee1_auth_login"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@id/ccp1"
                android:background="@drawable/edt_bg"
                android:orientation="horizontal"
                android:padding="2dp">

                <ImageView
                    android:id="@+id/iv_franchisee1_auth_phone_logo"
                    android:layout_width="56dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/phone_logo"
                    android:padding="13dp"
                    app:srcCompat="@drawable/phone_logo" />

                <EditText
                    android:id="@+id/edt_franchisee1_auth_phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="5dp"
                    android:autofillHints="phone"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/enter_mobile_number"
                    android:inputType="phone"
                    android:textColor="@color/Maastricht_Blue"
                    android:textColorHint="@color/Gray_Hint"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <!--Password layout-->
            <LinearLayout
                android:id="@+id/ll_franchisee1_auth_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_franchisee1_auth_phone"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edt_bg"
                android:orientation="horizontal"
                android:padding="2dp"
                android:visibility="visible"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_franchisee1_auth_password_logo"
                    android:layout_width="56dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/password_logo"
                    android:padding="15dp"
                    app:srcCompat="@drawable/password_logo" />

                <EditText
                    android:id="@+id/edt_franchisee1_auth_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="5dp"
                    android:autofillHints="password"
                    android:background="@color/white"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:hint="@string/enter_password"
                    android:inputType="textWebPassword"
                    android:tag="login_password"
                    android:textColor="@color/Maastricht_Blue"
                    android:textColorHint="@color/Gray_Hint"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

            <!--Forgot password option-->
            <TextView
                android:id="@+id/tvBtn_franchisee1_auth_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_franchisee1_auth_password"
                android:layout_alignEnd="@id/ll_franchisee1_auth_password"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/forgot_password"
                android:textColor="@color/Dim_Gray"
                android:textSize="12sp" />

            <!--Login button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_franchisee1_auth_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBtn_franchisee1_auth_forgot_password"
                android:layout_marginHorizontal="110dp"
                android:layout_marginVertical="30dp"
                android:background="@drawable/primary_button_bg"
                android:elevation="5dp"
                android:fontFamily="@font/roboto_bold"
                android:letterSpacing="0.01"
                android:tag="login"
                android:text="@string/login_sentence_case"
                android:textAllCaps="false"
                android:textColor="@color/Maastricht_Blue"
                android:textSize="18sp" />

            <ProgressBar
                android:id="@+id/progress_enter"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_below="@id/tvBtn_franchisee1_auth_login"
                android:theme="@style/ProgressBarStyle"
                android:visibility="gone">
            </ProgressBar>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:drawablePadding="5dp"
        android:focusable="true"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:minHeight="48dp"
        android:text="Continue with google"
        android:textColor="#5C8F6A"
        app:drawableTint="#5C8F6A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_acc_type_franchisee1"
        app:drawableEndCompat="@drawable/arrow_logo"
         />

</androidx.constraintlayout.widget.ConstraintLayout>